<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_database" >
        <Preference
            android:key="import_db"
            android:summary="@string/pref_import_db_summary"
            android:title="@string/pref_import_db" />
        <Preference
            android:key="export_db"
            android:summary="@string/pref_export_db_summary"
            android:title="@string/pref_export_db" />
        <Preference
            android:key="download_db"
            android:summary="@string/pref_download_db_summary"
            android:title="@string/pref_download_db" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_look" >
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/entries_themes"
            android:entryValues="@array/entryvalues_themes"
            android:key="theme"
            android:title="@string/pref_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other" >
        <Preference
            android:key="about"
            android:title="@string/pref_about" />
        <Preference
            android:summary="@string/pref_author_summary"
            android:title="@string/pref_author" />
        <Preference
            android:summary="@string/pref_licence_summary"
            android:title="@string/pref_licence" />
        <Preference
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version" />
    </PreferenceCategory>

</PreferenceScreen>